deployment/gateway/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  ports:
    - port: 4200
      name: http
  selector:
    app: gateway
