deployment/gateway/k8s/istio.gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 4200
        name: http
        protocol: HTTP
      hosts:
        - "*"
