deployment/gateway/k8s/istio.virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-virtualservice
spec:
  gateways:
    - echo-gateway
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: gateway.default.svc.cluster.local
